--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -5,9 +5,7 @@
 <script type="text/x-handlebars-template" id="core-networking-graph-template">
 	<div class="row-fluid visualization-container">
 		<div class="topology-visualization-canvas" style="height: 300px; overflow: hidden;">
-			<div class="topology-visualization-loading progress progress-striped active">
-  				<div class="bar" style="width: 100%;"></div>
-			</div>
+			<p class="topology-visualization-loading loading-spinner"><i class="icon-cog icon-spin"></i></p>
             <div id="networking-graph" class="topology-visualization row-fluid colmask holygrail">
 			    <div class="colmid">
 			        <div class="colleft">
@@ -85,5 +83,5 @@
 </script>
 
 <script type="text/x-handlebars-template" id="core-loading-spinner-template">
-    <p class="loading-spinner"><i class="icon-spinner icon-spin"></i></p>
+    <p class="loading-spinner"><i class="icon-cog icon-spin"></i></p>
 </script>
