--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -82,6 +82,19 @@
     </div>
 </script>
 
+<script type="text/x-handlebars-template" id="network-port-heat-chart-template">
+    <div>
+        <h4 class="smaller">Source TCP Port Map </h4>
+        <div id='src-tcp-heat-chart' class='portMapChart'></div>
+        <h4 class="smaller"> Destination TCP Port Map </h4>
+        <div id='dst-tcp-heat-chart' class='portMapChart'></div>
+        <h4 class="smaller"> Source UDP Port Map </h4>
+        <div id='src-udp-heat-chart' class='portMapChart'></div>
+        <h4 class="smaller"> Destination UDP Port Map </h4>
+        <div id='dst-udp-heat-chart' class='portMapChart'></div>
+    </div>
+</script>
+
 <script type="text/x-handlebars-template" id="core-loading-spinner-template">
     <p class="loading-spinner"><i class="icon-cog icon-spin"></i></p>
 </script>
