Added BreadcrumbView for Network Monitoring

--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -5,7 +5,7 @@
 <script type="text/x-handlebars-template" id="core-networking-graph-template">
 	<div class="row-fluid visualization-container">
 		<div class="topology-visualization-canvas" style="height: 300px; overflow: hidden;">
-			<p class="topology-visualization-loading loading-spinner"><i class="icon-cog icon-spin"></i></p>
+			<p class="topology-visualization-loading loading-spinner"><i class="icon-refresh icon-spin"></i></p>
             <div id="networking-graph" class="topology-visualization row-fluid colmask holygrail">
 			    <div class="colmid">
 			        <div class="colleft">
@@ -96,5 +96,5 @@
 </script>
 
 <script type="text/x-handlebars-template" id="core-loading-spinner-template">
-    <p class="loading-spinner"><i class="icon-cog icon-spin"></i></p>
+    <p class="loading-spinner"><i class="icon-refresh icon-spin"></i></p>
 </script>
