--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -4,33 +4,32 @@
 
 <script type="text/x-handlebars-template" id="core-networking-graph-template">
 	<div class="row-fluid visualization-container">
-		<div class="topology-visualization-canvas" style="height: 300px; overflow: hidden;">
-			<p class="topology-visualization-loading loading-spinner"><i class="icon-refresh icon-spin"></i></p>
-            <div id="networking-graph" class="topology-visualization row-fluid colmask holygrail">
+		<div class="graph-canvas" style="height: 300px; overflow: hidden;">
+			<p class="graph-loading loading-spinner"><i class="icon-refresh icon-spin"></i></p>
+            <div id="networking-graph" class="graph row-fluid colmask holygrail">
 			    <div class="colmid">
 			        <div class="colleft">
 			            <div class="col1wrap">
 			                <div class="col1">
-								<div id="graph-connected-elements" class="topology-visualization-connected-elements row-fluid">
-                                    <div id="topology-visualization-connected-elements-empty" class="visualization-empty hide">
+								<div id="graph-connected-elements" class="graph-connected-elements row-fluid">
+                                    <div id="graph-connected-elements-empty" class="visualization-empty hide">
                                         <p class="">No Virtual Network Found.</p>
                                     </div>
 								</div>
 							</div>
 			            </div>
 			            <div class="col2">
-							<div id="graph-config-elements" class="topology-visualization-config-elements row-fluid"></div>
+							<div id="graph-config-elements" class="graph-config-elements row-fluid"></div>
 			            </div>
 			            <div class="col3">
-							<div id="graph-controls" class="topology-controls pull-right">
-                                <div class="topology-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
-								<div class="topology-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
-								<div class="topology-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
-								<div class="topology-control-item" onclick="resizeWidget(this,'#topology');" title="Expand Visualization">
+							<div id="graph-controls" class="graph-controls pull-right">
+                                <div class="graph-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
+								<div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
+								<div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
+								<div class="graph-control-item resize" title="Resize">
                                     <i class="icon-resize-full"></i>
                                 </div>
                             </div>
-							<div id="graph-breadcrumb" class="hide breadcrumbs pull-right"></div>
 						</div>
 					</div>
 				</div>
@@ -40,7 +39,7 @@
 </script>
 
 <script type="text/x-handlebars-template" id="core-tabs-template">
-    <div id="contrail-tabs" class="row-fluid contrail-widget-tabs topology-visualization-tabs">
+    <div id="contrail-tabs" class="row-fluid contrail-widget-tabs graph-tabs">
         <ul>
             {{#each this}}
                 <li><a id="{{this.elementId}}-tab-link" href="#{{this.elementId}}-tab">{{this.title}}</a></li>
