Created a new view for Instance Traffic Stats

--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -42,12 +42,12 @@
     <div id="contrail-tabs" class="row-fluid contrail-widget-tabs graph-tabs">
         <ul>
             {{#each this}}
-                <li><a id="{{this.elementId}}-tab-link" href="#{{this.elementId}}-tab">{{this.title}}</a></li>
+                <li><a id="{{this.elementId}}-tab-link" class="contrail-tab-link" href="#{{this.elementId}}-tab">{{this.title}}</a></li>
             {{/each}}
         </ul>
         {{#each this}}
             <div id="{{this.elementId}}-tab">
-                <div id="{{this.elementId}}" class="{{this.viewConfig.class}}"></div>
+                <div id="{{this.elementId}}" class="contrail-tab-content {{this.viewConfig.class}}"></div>
             </div>
         {{/each}}
     </div>
@@ -94,6 +94,9 @@
     </div>
 </script>
 
-<script type="text/x-handlebars-template" id="core-loading-spinner-template">
-    <p class="loading-spinner"><i class="icon-refresh icon-spin"></i></p>
+<script type="text/x-handlebars-template" id="instance-traffic-stats-tab-template">
+    <div class="row-fluid center">
+        <div id="instance-traffic-stats-dropdown" class="select2-medium-width"></div>
+    </div>
+    <div id="instance-traffic-stats-chart" class="row-fluid"></div>
 </script>
