Added Loading icon inside connected elements container

--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -5,13 +5,13 @@
 <script type="text/x-handlebars-template" id="core-networking-graph-template">
 	<div class="row-fluid visualization-container">
 		<div class="graph-canvas" style="height: 300px; overflow: hidden;">
-			<p class="graph-loading loading-spinner"><i class="icon-refresh icon-spin"></i></p>
             <div id="networking-graph" class="graph row-fluid colmask holygrail">
 			    <div class="colmid">
 			        <div class="colleft">
 			            <div class="col1wrap">
 			                <div class="col1">
 								<div id="graph-connected-elements" class="graph-connected-elements row-fluid">
+                                    <div class="graph-loading loading-spinner"><i class="icon-refresh icon-spin"></i></div>
                                     <div id="graph-connected-elements-empty" class="visualization-empty hide">
                                         <p class="">No Virtual Network Found.</p>
                                     </div>
