--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -26,9 +26,8 @@
                                 <div class="graph-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
 								<div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
 								<div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
-								<div class="graph-control-item resize" title="Resize">
-                                    <i class="icon-resize-full"></i>
-                                </div>
+								<div class="graph-control-item resize" title="Resize"><i class="icon-resize-full"></i></div>
+                                <div class="graph-control-item refresh" title="Refresh"><i class="icon-repeat"></i></div>
                             </div>
 						</div>
 					</div>
