Added Connected Network Tab View which will be displayed when clicked on link between 2 networks

--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -93,9 +93,9 @@
     </div>
 </script>
 
-<script type="text/x-handlebars-template" id="instance-traffic-stats-tab-template">
+<script type="text/x-handlebars-template" id="traffic-stats-tab-template">
     <div class="row-fluid center">
-        <div id="instance-traffic-stats-dropdown" class="select2-medium-width"></div>
+        <div id="{{dropdownId}}" class="traffic-stats-dropdown select2-medium-width"></div>
     </div>
-    <div id="instance-traffic-stats-chart" class="row-fluid"></div>
+    <div id="{{chartId}}" class="traffic-stats-chart row-fluid"></div>
 </script>
