--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -27,8 +27,7 @@
 								<div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
 								<div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
 								<div class="graph-control-item resize" title="Resize"><i class="icon-resize-full"></i></div>
-                                <div class="graph-control-item left-to-right" title="Left to Right"><i class="icon-align-left"></i></div>
-                                <div class="graph-control-item top-to-bottom" title="Top to Bottom"><i class="icon-align-center"></i></div>
+                                <div class="graph-control-item realign" title="Realign"><i class="icon-align-center"></i></div>
                                 <div class="graph-control-item refresh" title="Refresh"><i class="icon-repeat"></i></div>
                             </div>
 						</div>
