--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -21,21 +21,30 @@
 			            <div class="col2">
 							<div id="graph-config-elements" class="graph-config-elements row-fluid"></div>
 			            </div>
-			            <div class="col3">
-							<div id="graph-controls" class="graph-controls pull-right">
-                                <div class="graph-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
-								<div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
-								<div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
-								<div class="graph-control-item resize" title="Resize"><i class="icon-resize-full"></i></div>
-                                <div class="graph-control-item realign" title="Realign"><i class="icon-align-center"></i></div>
-                                <div class="graph-control-item refresh" title="Refresh"><i class="icon-repeat"></i></div>
-                            </div>
+			            <div id="graph-control-panel" class="col3">
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</script>
+
+<script type="text/x-handlebars-template" id="graph-control-panel-template">
+    <div id="graph-controls" class="graph-controls pull-right">
+        <div class="graph-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
+        <div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
+        <div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
+        <div class="graph-control-item resize" title="Resize"><i class="icon-resize-full"></i></div>
+        <div class="graph-control-item realign" title="Change Direction">
+            {{#IfCompare rankDir 'LR' operator='=='}}
+                <i class="icon-align-center"></i>
+            {{else}}
+                <i class="icon-align-left"></i>
+            {{/IfCompare}}
+        </div>
+        <div class="graph-control-item refresh" title="Refresh"><i class="icon-repeat"></i></div>
+    </div>
 </script>
 
 <script type="text/x-handlebars-template" id="core-tabs-template">
