--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -11,7 +11,7 @@
 			            <div class="col1wrap">
 			                <div class="col1">
 								<div id="graph-connected-elements" class="graph-connected-elements row-fluid">
-                                    <div class="graph-loading loading-spinner"><i class="icon-refresh icon-spin"></i></div>
+                                    <div id="graph-loading" class="graph-loading loading-spinner"><i class="icon-refresh icon-spin"></i></div>
                                     <div id="graph-connected-elements-empty" class="visualization-empty hide">
                                         <p class="">No Virtual Network Found.</p>
                                     </div>
@@ -32,18 +32,14 @@
 
 <script type="text/x-handlebars-template" id="graph-control-panel-template">
     <div id="graph-controls" class="graph-controls pull-right">
-        <div class="graph-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
-        <div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
-        <div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
-        <div class="graph-control-item resize" title="Resize"><i class="icon-resize-full"></i></div>
-        <div class="graph-control-item realign" title="Change Direction">
-            {{#IfCompare rankDir 'LR' operator='=='}}
-                <i class="icon-align-center"></i>
-            {{else}}
-                <i class="icon-align-left"></i>
-            {{/IfCompare}}
-        </div>
-        <div class="graph-control-item refresh" title="Refresh"><i class="icon-repeat"></i></div>
+        {{#IfCompare defaultConfig.panzoom.enable true}}
+            <div class="graph-control-item zoom-in" title="Zoom In"><i class="icon-zoom-in"></i></div>
+            <div class="graph-control-item zoom-out" title="Zoom Out"><i class="icon-zoom-out"></i></div>
+            <div class="graph-control-item zoom-reset" title="Zoom Reset"><i class="icon-remove-circle"></i></div>
+        {{/IfCompare}}
+        {{#each customConfig}}
+            <div class="graph-control-item {{@key}}" title="{{title}}"><i class="{{iconClass}}"></i></div>
+        {{/each}}
     </div>
 </script>
 
