--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -3,7 +3,7 @@
 <script type="text/x-handlebars-template" id="query-select-popup-template">
     <form id="{{queryPrefix}}-select-popup-form" onsubmit="return false;">
         <div class="row-fluid">
-            <a class="pull-right selectAllLink " data-bind="text: select_data_object().defaultSelectAllText, click: select_data_object().onSelectAll"></a>
+            <a class="pull-right selectAllLink " data-bind="text: select_data_object().select_all_text, click: select_data_object().on_select_all"></a>
         </div>
         {{#each fields}}
             {{#IfCompare @index 0 operator="=="}}
@@ -15,7 +15,7 @@
                 {{/IfCompare}}
             {{/IfCompare}}
             <div class="span4">
-                <input type="checkbox" name="{{this.name}}" value="{{this.name}}" data-bind="checked: select_data_object().checkedFields, click: select_data_object().onSelect, enable: select_data_object().isEnableMap['{{this.name}}']" class="ace-input"/> <span class="ace-lbl"> {{this.name}}</span>
+                <input type="checkbox" name="{{this.name}}" value="{{this.name}}" data-bind="checked: select_data_object().checked_fields, click: select_data_object().on_select, enable: select_data_object().enable_map['{{this.name}}']" class="ace-input"/> <span class="ace-lbl"> {{this.name}}</span>
             </div>
         {{/each}}
         </div>
