--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -14,12 +14,21 @@
             </div>
             <div class="row-fluid row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
                 <div class="span4">
-                    <input type="checkbox"
-                        data-bind="
+                    <div class="row-fluid">
+                        <div class="span1">
+                            <input type="checkbox"
+                                   data-bind="
                             name: name, value: name, checked: $root.select_data_object().checked_fields,
                             click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
                             enable: $root.select_data_object().enable_map()[name]()"
-                        class="ace-input"/> <span class="ace-lbl" data-bind="text: name"></span>
+                                   class="ace-input"
+                            />
+                            <span class="ace-lbl"></span>
+                        </div>
+                        <div class="span11">
+                            <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
