Related-Bug: #1525089 Session Analyzer
- Adding support for analyzing a particular session selected by using
where clause with vrouter, srcvn, srcip, dsctvn, dstip, srcport, dstport

- SessionAnalyzerView takes selectedFlowRecord and queryFormAttributes.
it creates a SessionAnalyzerModel with multiple child contrailListModel created
with config for ingress, egress and reverse_ingress, reverse_egress query types.

- initial checkin for contrailListModelGroup which takes in array of listModel
configs and creates a model similar to ContrailListModel. All child models is
made available. Main model supports onAllRequestsComplete and onDataUpdate

- updates to flow-series, flow-record and query-queue views to support
session analyzer.

- flow query results with 7 tuples selected will have option to do session analysis

TODO: flow query results with less than 7 tuples selected should list all
Flow Records with the wehere clause set and 7 tuples selected so user can find
the particular flow and analyze.

Change-Id: Id37d7968f54131c5893bd651f6bd2d845f234cb7

--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -35,3 +35,18 @@
     </form>
 </script>
 
+<script type="text/x-handlebars-template" id="session-analyzer-view-template">
+    <div id="qe-{{queryPrefix}}-container">
+        {{#if text}}
+        <div id='qe-{{queryPrefix}}-text-container'>
+            <div id='qe-{{queryPrefix}}-text{{saQueryIdSuffix}}'></div>
+        </div>
+        {{/if}}
+        <div id='qe-{{queryPrefix}}-chart-container'>
+            <div id='qe-{{queryPrefix}}-chart{{saQueryIdSuffix}}'></div>
+        </div>
+        <div id="qe-{{queryPrefix}}-tab-container" class="margin-10-0-0">
+            <div id='qe-{{queryPrefix}}-tab{{saQueryIdSuffix}}'></div>
+        </div>
+    </div>
+</script>
