--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -36,17 +36,17 @@
 </script>
 
 <script type="text/x-handlebars-template" id="session-analyzer-view-template">
-    <div id="qe-{{queryPrefix}}-container">
+    <div id="qe-{{queryPrefix}}-container" class="row-fluid">
         {{#if text}}
-        <div id='qe-{{queryPrefix}}-text-container'>
-            <div id='qe-{{queryPrefix}}-text{{saQueryIdSuffix}}'></div>
+        <div id='qe-{{queryPrefix}}-text-container' class="row-fluid">
+            <div id='qe-{{queryPrefix}}-text{{saQueryIdSuffix}}' class="row-fluid"></div>
         </div>
         {{/if}}
-        <div id='qe-{{queryPrefix}}-chart-container'>
-            <div id='qe-{{queryPrefix}}-chart{{saQueryIdSuffix}}'></div>
+        <div id='qe-{{queryPrefix}}-chart-container' class="row-fluid">
+            <div id='qe-{{queryPrefix}}-result-chart{{saQueryIdSuffix}}' class="row-fluid"></div>
         </div>
-        <div id="qe-{{queryPrefix}}-tab-container" class="margin-10-0-0">
-            <div id='qe-{{queryPrefix}}-tab{{saQueryIdSuffix}}'></div>
+        <div id="qe-{{queryPrefix}}-tab-container" class="margin-10-0-0 row-fluid">
+            <div id='qe-{{queryPrefix}}-result-tab{{saQueryIdSuffix}}' class="row-fluid"></div>
         </div>
     </div>
 </script>
