--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -4,7 +4,7 @@
 
 <script type="text/x-handlebars-template" id="traffic-stats-tab-template">
     <div class="row-fluid center">
-        <div id="{{dropdownId}}" class="traffic-stats-dropdown select2-medium-width"></div>
+        <select id="{{dropdownId}}" class="traffic-stats-dropdown select2-medium-width"></select>
     </div>
     <div id="{{chartId}}" class="traffic-stats-chart row-fluid"></div>
 </script>
