--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div id="{{ widgetId }}" class="panel panel-default">
   <div class="panel-heading"><span class="title">{{ title }}</span>
     <div class="close fa fa-close pull-right"></div>
     <div class="config icon-gear pull-right"></div>
@@ -6,14 +6,8 @@
   <div class="front">
     <div class="panel-body"></div>
   </div>
-  <div class="back">
+  <div class="back hide">
     <div class="panel-body">
-      <select class="config" name="provider">
-        {{#select id}}
-          <option value="node">node</option> 
-          <option value="traffic">traffic</option> 
-        {{/select}}
-      </select>
     </div>
     <div class="panel-footer">
       <button class="save btn disabled">Save</button>
