--- a/webroot/reports/udd/ui/css/udd.css
+++ b/webroot/reports/udd/ui/css/udd.css
@@ -29,14 +29,12 @@
   border-left: 1px solid #ccc;
   padding: 0 16px; }
 
-#widgets {
-  display: flex;
-  min-height: 320px;
-  margin-bottom: 16px; }
-  #widgets .area {
+#content-container {
+}
+  #content-container .area {
     width: 100%;
     padding: 8px 0; }
-  #widgets .placeholder {
+  #content-container .placeholder {
     margin: 8px;
     text-align: center;
     border: 1px dashed #ccc;
@@ -44,48 +42,46 @@
     font-size: 72px;
     line-height: 56px; }
 
-#widgets .area .grid-stack .widget,
-#widgets .area .grid-stack .widget *,
-#widgets .area .grid-stack .widget *:before,
-#widgets .area .grid-stack .widget *:after {
+#content-container .area .grid-stack .grid-stack-item,
+#content-container .area .grid-stack .grid-stack-item *,
+#content-container .area .grid-stack .grid-stack-item *:before,
+#content-container .area .grid-stack .grid-stack-item *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-#widgets .area .grid-stack .widget.grid-stack-item,
-#widgets .area .grid-stack .widget.grid-stack-item .placeholder-content {
+#content-container .area .grid-stack .widget.grid-stack-item,
+#content-container .area .grid-stack .widget.grid-stack-item .placeholder-content {
   padding: 0 8px; }
 
-#widgets .area .grid-stack .widget .panel {
+#content-container .area .grid-stack .widget .panel {
   position: relative;
   height: 100%; }
-  #widgets .area .grid-stack .widget .panel .panel-heading {
+  #content-container .area .grid-stack .widget .panel .panel-heading {
     height: 36px; }
-    #widgets .area .grid-stack .widget .panel .panel-heading .close, #widgets .area .grid-stack .widget .panel .panel-heading .config {
+    #content-container .area .grid-stack .widget .panel .panel-heading .close, #content-container .area .grid-stack .widget .panel .panel-heading .config {
       margin-left: 16px;
       color: #898989;
       opacity: 1; }
-    #widgets .area .grid-stack .widget .panel .panel-heading input {
+    #content-container .area .grid-stack .widget .panel .panel-heading input {
       position: absolute;
       top: 5px; }
-  #widgets .area .grid-stack .widget .panel .back {
-    display: none; }
-    #widgets .area .grid-stack .widget .panel .back .panel-footer {
+    #content-container .area .grid-stack .panel .back .panel-footer {
       position: absolute;
       bottom: 0;
       width: 100%; }
 
-#widgets .chart {
+#content-container .chart {
   width: 100%;
   height: 100%;
   margin: 20px 0;
   padding: 0px; }
-  #widgets .chart svg {
+  #content-container .chart svg {
     display: block;
     width: 100%;
     min-height: 300px;
     margin: 20px 0;
     padding: 0px; }
-  #widgets .chart text {
+  #content-container .chart text {
     font: 12px sans-serif; }
 
