--- a/webroot/reports/udd/ui/templates/udd.tmpl
+++ b/webroot/reports/udd/ui/templates/udd.tmpl
@@ -32,3 +32,11 @@
         </div>
     </form>
 </script>
+<script type="text/x-handlebars-template" id="widget-title-edit-template">
+    <input type="text" value="{{ title }}"/>
+</script>
+<script type="text/x-handlebars-template" id="chart-config-template">
+    <input type="text" data-bind="value: color"/>
+    <input type="text" data-bind="value: yAxisLabel"/>
+    <input type="text" data-bind="value: yAxisValue"/>
+</script>
