--- a/webroot/config/dns/records/ui/templates/dnsRecords.tmpl
+++ b/webroot/config/dns/records/ui/templates/dnsRecords.tmpl
@@ -8,7 +8,7 @@
             </div>
             <div class="span2">
                 <span class="pull-right" style="display:none;" data-bind="visible: {{lockAttr}}, event: { click: function() { toggleLockAttr('{{name}}') }}">
-                    <i class="icon-pencil blue" data-bind="css: {'grey': locks().{{name}}_locked }"></i>
+                    <i class="fa fa-pencil blue" data-bind="css: {'grey': locks().{{name}}_locked }"></i>
                 </span>
             </div>
         </div>
