--- a/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
+++ b/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
@@ -4,7 +4,7 @@
 
 <script type="text/x-handlebars-template" id="login-window-template">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-remove"></i></button>
           <h6 class="modal-header-title">Login</h6>
         </div>
         <div class="modal-body">
@@ -16,7 +16,7 @@
                       <div class="row-fluid">
                           <div class="input-prepend span12">
                                 <span class="add-on">
-                                    <i class="icon-user"></i>
+                                    <i class="fa fa-user"></i>
                                 </span>
                                 <input type="text" id="txtLoginUserName" placeholder="User Name" class="login" />
                            </div>
@@ -24,7 +24,7 @@
                       <div class="row-fluid">
                           <div class="input-prepend span12">
                                 <span class="add-on">
-                                    <i class="icon-key"></i>
+                                    <i class="fa fa-key"></i>
                                 </span>
                                  <input type="password" id="txtLoginPassword" placeholder="Password" class="login" />
                           </div>
