--- a/webroot/reports/udd/ui/templates/udd.tmpl
+++ b/webroot/reports/udd/ui/templates/udd.tmpl
@@ -39,4 +39,7 @@
     <input type="text" data-bind="value: color"/>
     <input type="text" data-bind="value: yAxisLabel"/>
     <input type="text" data-bind="value: yAxisValue"/>
+    <div class="update_widget display-inline-block margin-5-10-0-0">
+      <button class="btn btn-mini btn-primary">Update Chart</button>
+    </div>
 </script>
