data source and content view selection

--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -7,11 +7,12 @@
     <div class="back panel-body hide">
         <ul class="nav nav-pills">
             <li><a data-id="{{ id }}DataConfig">Data source config</a></li>
-            <li><a data-id="{{ id }}ChartConfig">Chart config</a></li>
+            <li><a data-id="{{ id }}ContentConfig">Content config</a></li>
         </ul>
+        <div class="data-source"></div>
         <div class="tabs">
             <div id="{{ id }}DataConfig" class="data-config"></div>
-            <div id="{{ id }}ChartConfig" class="chart-config"></div>
+            <div id="{{ id }}ContentConfig" class="chart-config"></div>
         </div>
     </div>
 </div>
