--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -1,7 +1,7 @@
 <div id="{{ id }}" class="widget panel panel-default">
     <div class="panel-heading"><span class="title">{{ title }}</span>
-        <div class="close fa fa-close pull-right"></div>
         <div class="config icon-gear pull-right"></div>
+        <div class="close fa fa-close pull-right">Delete</div>
     </div>
     <div id="{{ id }}Content" class="front panel-body"></div>
     <div class="back panel-body hide">
