persist widgets x,y,width,height

--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -9,10 +9,10 @@
             <li><a data-id="{{ id }}DataConfig">Data source config</a></li>
             <li><a data-id="{{ id }}ContentConfig">Content config</a></li>
         </ul>
-        <div class="data-source"></div>
+        <div id="{{ id }}Selection" class="data-source"></div>
         <div class="tabs">
             <div id="{{ id }}DataConfig" class="data-config"></div>
-            <div id="{{ id }}ContentConfig" class="chart-config"></div>
+            <div id="{{ id }}ContentConfig" class="content-config"></div>
         </div>
     </div>
 </div>
