--- a/webroot/setting/introspect/ui/css/contrail.introspect.css
+++ b/webroot/setting/introspect/ui/css/contrail.introspect.css
@@ -10,6 +10,7 @@ a.introspect-link {
 }
 .contrail-introspect-grid table {
     width: 100%;
+    background-color: #FFFFFF;
 }
 .contrail-introspect-grid table thead {
     border-top: 1px solid #CCCCCC;
