--- a/webroot/reports/udd/ui/css/udd.css
+++ b/webroot/reports/udd/ui/css/udd.css
@@ -77,7 +77,7 @@
     #content-container .area .grid-stack .widget.panel .panel-body {
       padding: 10px;
     }
-    #content-container .area .grid-stack .widget.panel .back.panel-body .tabs .chart-config {
+    #content-container .area .grid-stack .widget.panel .back.panel-body .tabs .content-config {
       display: none;
     }
     #content-container .area .grid-stack .widget.panel ul.nav-pills {
