--- a/webroot/reports/udd/ui/css/udd.css
+++ b/webroot/reports/udd/ui/css/udd.css
@@ -38,7 +38,7 @@
     margin: 8px;
     text-align: center;
     border: 1px dashed #ccc;
-    color: grey;
+    color: #ccc;
     font-size: 72px;
     line-height: 56px; }
 
