update contentConfigView on dropdown select another contentView

--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -5,16 +5,16 @@
         <div class="config icon-gear pull-right"></div>
         <div class="close fa fa-close pull-right">Delete</div>
     </div>
-    <div id="{{ id }}Content" class="front panel-body"></div>
+    <div id="{{ id }}-contentView" class="front panel-body"></div>
     <div class="back panel-body hide">
         <ul class="nav nav-pills">
-            <li><a data-id="{{ id }}DataConfig">Data source config</a></li>
-            <li><a data-id="{{ id }}ContentConfig">Content config</a></li>
+            <li><a data-id="{{ id }}-dataConfigView">Data source config</a></li>
+            <li><a data-id="{{ id }}-contentConfigView">Content config</a></li>
         </ul>
         <div id="{{ id }}Selection" class="data-source"></div>
         <div class="tabs">
-            <div id="{{ id }}DataConfig" class="data-config"></div>
-            <div id="{{ id }}ContentConfig" class="content-config"></div>
+            <div id="{{ id }}-dataConfigView" class="data-config"></div>
+            <div id="{{ id }}-contentConfigView" class="content-config"></div>
         </div>
     </div>
 </div>
