Styles changes for bootstrap3 for header, sidebar, query and dashboard pages

--- a/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
+++ b/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
@@ -13,17 +13,17 @@
                 <form class="login-fields">
                     <p>Please enter SSH login credentials :</p>
                       <div id="divLoginError" class="text-error"></div>
-                      <div class="row-fluid">
-                          <div class="input-prepend span12">
-                                <span class="add-on">
+                      <div class="row">
+                          <div class="input-prepend col-xs-12">
+                                <span class="input-group-addon">
                                     <i class="fa fa-user"></i>
                                 </span>
                                 <input type="text" id="txtLoginUserName" placeholder="User Name" class="login" />
                            </div>
                       </div>
-                      <div class="row-fluid">
-                          <div class="input-prepend span12">
-                                <span class="add-on">
+                      <div class="row">
+                          <div class="input-prepend col-xs-12">
+                                <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
                                  <input type="password" id="txtLoginPassword" placeholder="Password" class="login" />
