--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -30,7 +30,7 @@
 
 #PolicyRules #simple_action .select2-container-disabled .select2-choice,
 #PolicyRules #simple_action .select2-container,
-#PolicyRules #protocol .custom-combobox .add-on,
+#PolicyRules #protocol .custom-combobox .input-group-addon,
 #PolicyRules #src_address .select2-container,
 #PolicyRules #direction .select2-container,
 #PolicyRules #direction .select2-container-disabled .select2-choice,
@@ -430,7 +430,7 @@ td.action-cell a{color:#787878;}
 #interfaces-collection tr.collapsibleChildContainer .data-row td, #interfaces-collection tr.collapsibleChildContainer .error-row td{height:0px;}
 #interfaces th.text-center{
     text-align:center!important}
-#PolicyRules .custom-combobox>span.add-on{
+#PolicyRules .custom-combobox>span.input-group-addon{
     background:transparent;
     border:transparent solid 1px;
     position:absolute;
