Style changes for bootstrap3 for login page, tabs, header

--- a/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
+++ b/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
@@ -14,7 +14,7 @@
                     <p>Please enter SSH login credentials :</p>
                       <div id="divLoginError" class="text-error"></div>
                       <div class="row">
-                          <div class="input-prepend col-xs-12">
+                          <div class="input-group col-xs-12">
                                 <span class="input-group-addon">
                                     <i class="fa fa-user"></i>
                                 </span>
@@ -22,7 +22,7 @@
                            </div>
                       </div>
                       <div class="row">
-                          <div class="input-prepend col-xs-12">
+                          <div class="input-group col-xs-12">
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
