--- a/webroot/reports/udd/ui/css/udd.css
+++ b/webroot/reports/udd/ui/css/udd.css
@@ -63,19 +63,27 @@
   right: 5px;
   bottom: 5px;
 }
-#content-container .area .grid-stack .widget.panel .panel-heading {
+#content-container .area .grid-stack .widget.panel .panel-heading,
+#content-container .area .grid-stack .widget.panel .panel-footer {
   position: absolute;
   width: 100%;
   height: 36px;
+  line-height: 36px;
+  padding: 0 16px;
 }
-#content-container .area .grid-stack .widget.panel .panel-heading .close, #content-container .area .grid-stack .widget.panel .panel-heading .config {
+#content-container .area .grid-stack .widget.panel .panel-heading .config-title {
+  font-weight: bold;
+}
+#content-container .area .grid-stack .widget.panel .panel-heading .close,
+#content-container .area .grid-stack .widget.panel .panel-heading .config {
+  line-height: 36px;
   margin-left: 16px;
   color: #898989;
   opacity: 1;
 }
 #content-container .area .grid-stack .widget.panel .panel-heading .close {
+  line-height: 36px;
   font-size: 12px;
-  line-height: 14px;
 }
 #content-container .area .grid-stack .widget.panel .panel-heading .close:hover {
   color: red;
@@ -90,10 +98,12 @@
   width: 100%;
   overflow: auto;
   top: 36px;
-  bottom: 0;
+  bottom: 36px;
   padding: 10px;
 }
-#content-container .area .grid-stack .widget.panel .back.panel-body .tabs .content-config {
+#content-container .area .grid-stack .widget.panel .panel-body .data-config,
+#content-container .area .grid-stack .widget.panel .panel-body .content-config,
+#content-container .area .grid-stack .widget.panel .panel-body .content-view {
   display: none;
 }
 #content-container .area .grid-stack .widget.panel ul.nav-pills {
@@ -102,6 +112,15 @@
 #content-container .area .grid-stack .widget.panel ul.nav-pills li {
   float: none;
   display: inline-block;
+}
+#content-container .area .grid-stack .widget.panel .panel-footer {
+  bottom: 0;
+}
+#content-container .area .grid-stack .widget.panel .panel-footer .btn {
+  margin-left: 8px;
+}
+#content-container .area .grid-stack .widget.panel .panel-footer .reset {
+  padding-left: 0;
 }
 
 #content-container .chart {
