--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -1,20 +1,16 @@
 <div id="{{ id }}" class="widget panel panel-default">
     <div class="panel-heading">
+        <span class="config-title"></span>
         <span class="title" data-bind="html:title"></span>
         <input class="edit-title" type="text" data-bind="value:title"/>
         <div class="config icon-gear pull-right"></div>
         <div class="close fa fa-close pull-right">Delete</div>
     </div>
-    <div id="{{ id }}-contentView" class="front panel-body"></div>
-    <div class="back panel-body hide">
-        <ul class="nav nav-pills">
-            <li><a data-id="{{ id }}-dataConfigView">Data source config</a></li>
-            <li><a data-id="{{ id }}-contentConfigView">Content config</a></li>
-        </ul>
-        <div id="{{ id }}Selection" class="data-source"></div>
-        <div class="tabs">
-            <div id="{{ id }}-dataConfigView" class="data-config"></div>
-            <div id="{{ id }}-contentConfigView" class="content-config"></div>
-        </div>
+    <div class="panel-body">
+        <div id="{{ id }}-config-selectors" class="config-selectors"></div>
+        <div id="{{ id }}-dataConfigView" class="data-config step"></div>
+        <div id="{{ id }}-contentConfigView" class="content-config step"></div>
+        <div id="{{ id }}-contentView" class="content-view step"></div>
     </div>
+    <div class="panel-footer"></div>
 </div>
