Bootstrap3 upgrade style chnages for mini-menu, modal basics, node details pages

--- a/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
+++ b/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
@@ -3,6 +3,7 @@
 -->
 
 <script type="text/x-handlebars-template" id="login-window-template">
+<div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-remove"></i></button>
           <h6 class="modal-header-title">Login</h6>
@@ -37,6 +38,7 @@
           <button id="btnLoginWindowCancel" class="btn btn-primary btn-mini" data-dismiss="modal" aria-hidden="true">Cancel</button>
           <button id="btnLoginWindowLogin" class="btn btn-primary btn-mini" data-dismiss="modal" aria-hidden="true">Login</button>
         </div>
+</div>
 </script>
 
 <script type="text/x-handlebars-template" id="monitor-infra-details-footer-links-template">
