Bootstrap3 style fixes for mini-menu, NM graph, advanced query form elements

--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -24,7 +24,7 @@
 
 
 <script type="text/x-handlebars-template" id="underlay-graph-template">
-    <div class="row visualization-container" style="position: relative;">
+    <div class="visualization-container" style="position: relative;">
         <div id="graph-loading" class="graph-loading">
                 <p class="loading-message">Loading..<p>
         </div>
