--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -3,9 +3,9 @@
 -->
 
 <script type="text/x-handlebars-template" id="core-networking-graph-template">
-	<div class="row visualization-container">
+	<div class="visualization-container">
 		<div class="graph-canvas" style="height: 300px; overflow: hidden;">
-            <div id="networking-graph" class="graph row colmask holygrail">
+            <div id="networking-graph" class="graph colmask holygrail">
 			    <div class="colmid">
 			        <div class="colleft">
 			            <div class="col1wrap">
@@ -15,7 +15,7 @@
 							</div>
 			            </div>
 			            <div class="col2">
-							<div id="graph-config-elements" class="graph-config-elements row"></div>
+							<div id="graph-config-elements" class="graph-config-elements"></div>
 			            </div>
 			            <div id="graph-control-panel" class="col3"></div>
 					</div>
