--- a/webroot/reports/qe/ui/css/qe.main.css
+++ b/webroot/reports/qe/ui/css/qe.main.css
@@ -103,10 +103,10 @@ a.selectAllLink:hover {
 .or-clause-collection .or-clause:first-child .or-text {
     visibility: hidden;
 }
-.or-clause-collection > .or-clause.row-fluid > .span1 {
+.or-clause-collection > .or-clause.row-fluid > .col-xs-1 {
     width: 3%;
 }
-.or-clause-collection > .or-clause.row-fluid > .span10 {
+.or-clause-collection > .or-clause.row-fluid > .col-xs-10 {
     width: 89.2%;
 }
 .or-clause-collection .or-text {
@@ -114,7 +114,7 @@ a.selectAllLink:hover {
     color: #000;
     padding: 10px 0 0;
     font-weight: normal;
-    float: right;
+    text-align: center;
 }
 .or-clause-collection .or-clause-text {
     padding: 5px 10px;
