--- a/webroot/reports/udd/ui/css/udd.css
+++ b/webroot/reports/udd/ui/css/udd.css
@@ -66,20 +66,35 @@
 #content-container .area .grid-stack .widget.panel .panel-heading,
 #content-container .area .grid-stack .widget.panel .panel-footer {
   position: absolute;
+  display: flex;
+  justify-content: flex-start;
   width: 100%;
   height: 36px;
   line-height: 36px;
-  padding: 0 16px;
+  padding: 0 8px;
 }
 #content-container .area .grid-stack .widget.panel .panel-heading .config-title {
+  flex: none;
   font-weight: bold;
+}
+#content-container .area .grid-stack .widget.panel .panel-heading .title {
+  display: inline-block;
+  flex: 1 1 auto;
+  white-space: nowrap;
+  overflow: hidden;
+  padding-left: 4px;
+}
+#content-container .area .grid-stack .widget.panel .panel-heading .edit-title {
+  padding-left: 4px;
+  width: 80%;
 }
 #content-container .area .grid-stack .widget.panel .panel-heading .close,
 #content-container .area .grid-stack .widget.panel .panel-heading .config {
+  flex: none;
   line-height: 36px;
-  margin-left: 16px;
   color: #898989;
   opacity: 1;
+  padding: 0 8px;
 }
 #content-container .area .grid-stack .widget.panel .panel-heading .close {
   line-height: 36px;
