--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -1,10 +1,10 @@
 <div id="{{ id }}" class="widget panel panel-default">
     <div class="panel-heading">
         <span class="config-title"></span>
-        <span class="title" data-bind="html:title"></span>
+        <div class="title" data-bind="html:title"></div>
         <input class="edit-title" type="text" data-bind="value:title"/>
-        <div class="config icon-gear pull-right"></div>
-        <div class="close fa fa-close pull-right">Delete</div>
+        <div class="close fa fa-close">Delete</div>
+        <div class="config icon-gear"></div>
     </div>
     <div class="panel-body">
         <div id="{{ id }}-config-selectors" class="config-selectors"></div>
